--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#fff">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/chooseimg"
+        android:scaleType="centerCrop"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -34,5 +42,6 @@
         android:layout_height="match_parent"
         android:id="@+id/listview"
         android:cacheColorHint="#fff"/>
+    </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
