--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -27,5 +27,13 @@
         android:id="@+id/warntext"
         android:textColor="#fff"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="16sp"
+        android:id="@+id/warntext1"
+        android:textColor="#fff"/>
+
 
 </LinearLayout>
