--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.example.ruanyulin.weather.MainActivity">
 
-    <fragment
-        android:id="@+id/chooseareafrag"
-        android:name="com.example.ruanyulin.weather.ChooseAreaFragment"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="match_parent"
+        android:background="@drawable/weather"/>
 </FrameLayout>
