--- a/app/src/main/res/layout/api.xml
+++ b/app/src/main/res/layout/api.xml
@@ -38,14 +38,14 @@
                     android:id="@+id/apitext"
                     android:layout_gravity="center"
                     android:textSize="40sp"
-                    android:textColor="#fff"/>
+                    android:textColor="@color/white"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="AQI指数"
-                    android:textColor="#fff"/>
+                    android:textColor="@color/white"/>
             </LinearLayout>
         </RelativeLayout>
 
@@ -65,14 +65,14 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/pm25text"
                     android:layout_gravity="center"
-                    android:textColor="#fff"
+                    android:textColor="@color/white"
                     android:textSize="40sp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="PM2.5"
-                    android:textColor="#fff"/>
+                    android:textColor="@color/white"/>
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
