--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/chooseimg"
+
         android:scaleType="centerCrop"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,7 +42,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listview"
-        android:cacheColorHint="#fff"/>
+        android:scrollbars="none"
+        android:textColor="@color/white"/>
     </LinearLayout>
 
 </FrameLayout>
