--- a/app/src/main/res/layout/forecast.xml
+++ b/app/src/main/res/layout/forecast.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="5dp"
-        android:text="预报"
-        android:textColor="#fff"
+        android:text="未来几天天气预报"
+        android:textColor="@color/white"
         android:textSize="20sp"/>
     <LinearLayout
         android:layout_width="match_parent"
