--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -12,7 +12,7 @@
         android:layout_centerVertical="true"
         android:background="@android:drawable/ic_menu_more"
         android:id="@+id/selectbutton"
-        android:textColor="#fff"
+        android:textColor="@color/white"
         android:textSize="16sp"/>
 
     <TextView
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/titlecity"
         android:layout_centerInParent="true"
-        android:textColor="#fff"
+        android:textColor="@color/white"
         android:textSize="20sp"/>
 
     <TextView
@@ -30,7 +30,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:layout_centerVertical="true"
-        android:textColor="#fff"
+        android:textColor="@color/white"
         android:textSize="16sp"/>
 
 </RelativeLayout>
