--- a/app/src/main/res/layout/api.xml
+++ b/app/src/main/res/layout/api.xml
@@ -3,9 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_margin="15dp"
-    android:background="#8000"
-    >
+    android:layout_margin="15dp">
 
     <TextView
         android:layout_width="wrap_content"
