--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -24,8 +24,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/titletext"
             android:layout_centerInParent="true"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/backbutton"
