--- a/app/src/main/res/layout/suggestion.xml
+++ b/app/src/main/res/layout/suggestion.xml
@@ -3,15 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_margin="15dp"
-    android:background="#8000">
+    android:showDividers="middle"
+    android:divider="@color/divier"
+    android:layout_margin="15dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:text="生活建议"
+        android:layout_marginTop="5dp"
+        android:text="生活小贴士"
+        android:layout_marginBottom="15dp"
         android:textColor="#fff"
         android:textSize="20sp"/>
 
