--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -23,13 +23,15 @@
         android:textColor="@color/white"
         android:textSize="20sp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/titleupdatetime"
-        android:layout_alignParentRight="true"
+
+    <Button
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginRight="10dp"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:background="@android:drawable/ic_menu_info_details"
+        android:id="@+id/aboutbutton"
         android:textColor="@color/white"
         android:textSize="16sp"/>
 
