--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -3,7 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="15dp">
+    android:layout_marginBottom="15dp"
+    android:layout_marginEnd="15dp"
+    android:layout_marginStart="15dp"
+   >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/titleupdatetime"
+        android:layout_gravity="center"
+        android:textColor="@color/white"
+        android:textSize="16sp"/>
 
     <TextView
         android:layout_width="wrap_content"
