--- a/app/src/main/res/layout/api.xml
+++ b/app/src/main/res/layout/api.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
-        android:text="空气质量"
+        android:id="@+id/aqitext"
         android:textColor="#fff"
         android:textSize="20sp"/>
 
@@ -42,7 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="AQI指数"
+                    android:id="@+id/aqitext1"
                     android:textColor="@color/white"/>
             </LinearLayout>
         </RelativeLayout>
@@ -69,7 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="PM2.5"
+                    android:id="@+id/pm25text1"
                     android:textColor="@color/white"/>
             </LinearLayout>
         </RelativeLayout>
