--- a/app/src/main/res/layout/suggestion.xml
+++ b/app/src/main/res/layout/suggestion.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="5dp"
-        android:text="生活小贴士"
+        android:id="@+id/suggest1"
         android:layout_marginBottom="15dp"
         android:textColor="#fff"
         android:textSize="20sp"/>
