--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="red">#8b0000</color>
     <color name="divier">#808080</color>
     <color name="clicked">#8b008b</color>
+    <color name="black1">#000000</color>
 </resources>
